--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -11,29 +11,42 @@
 }
 
 @media screen and (min-width: 320px){
-    .box-sm{
+    .box{
         width: 100%;
-        padding: 0 20px 0 20px;
+        padding: 0 10px 0 10px;
         margin: 0 auto;
+    
+        &-full{
+            max-width: 100%;
+            padding: 0 20px 0 20px;
+            margin: 0 auto;
+        }
     }
 }
-
 
 @media screen and (min-width: 768px){
-    .box-md{
+    .box{
         width: 80%;
         padding: 0 20px 0 20px;
         margin: 0 auto;
+        &-full{
+            max-width: 100%;
+            padding: 0 20px 0 20px;
+            margin: 0 auto;
+        }
     }
 }
-    
+
 @media screen and (min-width: 1024){
-    .box-lg{
+    .box{
         width: 80%;
         padding: 0 20px 0 20px;
         margin: 0 auto;
+    
+        &-full{
+            max-width: 100%;
+            padding: 0 20px 0 20px;
+            margin: 0 auto;
+        }
     }
 }
-
-
-
